--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^51.0.20",
+    "expo": "~51.0.21",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "^3.5.18",
@@ -17,13 +17,18 @@
     "react": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.7.0",
     "@types/react": "~18.2.45",
-    "typescript": "~5.3.3"
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.8.0",
+    "typescript": "~5.3.3",
+    "typescript-eslint": "^7.16.1"
   },
   "private": true
 }
