--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "expo": "~51.0.22",
+    "expo": "~51.0.24",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "^3.5.18",
+    "expo-router": "~3.5.20",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "^0.74.3",
