--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,15 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./global.d.ts"
+    ],
+    // その他の設定
+  },
+  "include": [
+    "src/**/*",
+    "global.d.ts"
+  ]
 }
