--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,18 @@
     "strict": true,
     "jsx": "react-native",
     "moduleResolution": "node",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "src/*"
+      ]
+    },
     "typeRoots": [
       "./node_modules/@types",
       "./global.d.ts"
-    ],
-    // その他の設定
+    ]
   },
   "include": [
     "src/**/*",
